[package]
name = "rngcheck"
description = "Helpers for checking random number generator operation"
repository = "https://github.com/ryankurte/rngcheck"
keywords = [ "rng", "test", "NIST", "800-22", "diehard" ]
version = "0.1.1"
edition = "2021"
license = "MIT"


[dependencies]
libm = "0.2.7"
special = "0.10.3"

[dev-dependencies]
rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
assert_approx_eq = "1.1.0"
bitvec = "1.0.1"
